# .github

./: *.prompt.yml  .*  .alpha  .aoe  .bashrc.local  .deploy  .dockerignore  .dynamic  .editorconfig  .env.example  .env.example.extended  .family  .gists  .gitattributes  .gitconfig.local  .gitignore  .init  .load  .markdownlint.json  .maxopt  .nllang  .npmignore  .prettierrc.json  .xx  .yamllint.yml  .zshrc.local  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  VERSION  backup_2025-12-13 04-30-04.474975.gsbak  c*  docker-compose.yml  (+6 more)
*/: *  .all  .alpha  .dynamic
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot*.yml  dependabot.yml  labeler.yml  mlc_config.json  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: *.yml  auto-sync.yml  ci.yml  codacy*.yml  codeql*.yml  codeql.yml  create-branches.yml  datree*.yml  dependency-check.yml  docker-release.yml  execute.yml  kubesec*.yml  kubesec.yml  labeler.yml  lint.yml  makefile*.yml  makefile.yml  npm-release.yml  release.yml  security-scan.yml  stale.yml
Formula/: github-config.rb
docs/: API.md  FAQ.md  GUIDELINES.md  INSTALLATION.md  TEMPLATES.md  WORKFLOWS.md
homebrew/: github-config.rb
profile/: .oktay  README.md
scripts/: README.md  deploy.sh  health-check.py  install.bat  install.ps1  install.sh  setup.sh
settings/: .actions  .care  .deploy  .dynamic  .gists  .load  .nllang  .xx
test/: run-tests.sh
